--- a/client/src/components/styles/styles.css
+++ b/client/src/components/styles/styles.css
@@ -104,16 +104,13 @@ input {
 .head-to-head-table {
   width: 100%;
   border-collapse: collapse;
-  table-layout: fixed; /* Ensures the cells have a fixed width */
 }
 
 .head-to-head-table th,
 .head-to-head-table td {
-  border: 1px solid #ddd;
   padding: 8px;
   text-align: center;
-  width: calc(100% / 4); /* Adjust this value based on the number of columns */
-  box-sizing: border-box; /* Ensures padding and border are included in the width */
+  white-space: nowrap; /* Prevent text wrapping */
 }
 
 .head-to-head-table th {
@@ -218,18 +215,19 @@ input {
 
 .popover-row {
   display: flex;
+  align-items: center;
   justify-content: space-between;
-  width: 100%;
-  padding: 5px 0;
+  padding: 4px 8px;
 }
 
 .popover-player {
-  flex: 1;
+  font-weight: bold;
 }
 
 .popover-result {
   flex: 1;
-  text-align: center;
+  text-align: right;
+  padding-left: 8px;
 }
 
 .IconButton {
